<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tagDialog">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_tag"
        android:gravity="center_horizontal"
        android:id="@+id/setStatusLabel"
        android:textSize="20sp"
        android:fontFamily="@font/monteserrat_medium"
        />
    <View
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="1dp"
        android:id="@+id/separator"
        android:background="@color/colorPrimary"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:id="@+id/tag_group">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/groceries"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/groceries"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/shopping"
                    android:id="@+id/shopping"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/food"
                    android:id="@+id/food"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/miscellaneous"
                    android:id="@+id/miscellaneous"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/custom_tag"
                    android:id="@+id/custom_tag"/>
            </RadioGroup>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/customTagEditText"
            android:hint="@string/hint_custom_tag"
            android:maxLength="15"
            android:textSize="15sp"
            android:enabled="false"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeTagCancel"
            android:fontFamily="@font/monteserrat_medium"
            android:layout_weight="1"
            android:text="@string/cancel"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monteserrat_medium"
            android:id="@+id/changeTagButton"
            android:layout_weight="1"
            android:text="@string/save"
            />
    </LinearLayout>
</LinearLayout>