<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
         <RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/helper"
        android:textSize="20sp"
        android:text="@string/helperText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_below="@id/helper"
            android:layout_centerHorizontal="true"
            android:id="@+id/pieChartText"
            android:text="@string/expenditure"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id = "@+id/pieChart"
            android:layout_width = "300dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/pieChartText"
            android:layout_height = "300dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_below="@id/pieChart"
            android:id="@+id/barChartText"
            android:layout_centerHorizontal="true"
            android:text="@string/tagsExpenditure"/>
        <com.github.mikephil.charting.charts.BarChart
            android:id = "@+id/barChart"
            android:layout_width = "400dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/barChartText"
            android:layout_height = "250dp" />

    </RelativeLayout>
</ScrollView>
</LinearLayout>